# rlg

./: .gitignore  Cargo.toml  README.md  config.json
.cargo/: config.toml
assets/: Cargo.toml
assets/src/: assets.rs  lib.rs  main.rs  parser.rs
checker/: Cargo.toml
checker/src/: main.rs
cloudflare/: Cargo.toml
cloudflare/src/: lib.rs
parsed/: certifications.json  item_types.json  items.json  paints.json  platforms.json  qualities.json  search_types.json  series.json
parser/: Cargo.toml
parser-gui/: .gitignore  index.html  package-lock.json  package.json
parser-gui/.xwin-cache/unpack/Win11SDK_10.0.22000_headers.msi/: tree.txt
parser-gui/.xwin-cache/unpack/Win11SDK_10.0.22000_libs_x86_64.msi/: tree.txt
parser-gui/.xwin-cache/unpack/Win11SDK_10.0.22000_store_headers.msi/: tree.txt
parser-gui/.xwin-cache/unpack/Win11SDK_10.0.22000_store_libs.msi/: tree.txt
parser-gui/.xwin-cache/unpack/ucrt.msi/: tree.txt
parser-gui/src/: App.tsx  main.tsx
parser-gui/src-tauri/: Cargo.toml  tauri.conf.json
parser-gui/src-tauri/parsed/: certifications.json  item_types.json  items.json  paints.json  platforms.json  qualities.json  search_types.json  series.json
parser-gui/src-tauri/src/: main.rs
parser-gui/src/components/layouts/items/: index.tsx
parser-gui/src/components/layouts/navigation/: index.tsx
parser-gui/src/components/layouts/page/: content.tsx  index.tsx
parser-gui/src/components/routes/: add.tsx  item.tsx
parser-gui/src/styles/: index.css
parser-gui/src/types/: item.ts  price.ts
parser/src/: main.rs  parser.rs
