[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
scraper = "0.17.1"
tokio = { version = "1.29.1", features = ["full"] }
serde = "1.0.181"
url = "2.4.0"
cloudflare = { path = "../cloudflare/" }
